--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,900;1,500;1,600;1,900&display=swap");
 @tailwind base;
 @tailwind components;
@@ -5,4 +6,5 @@
 
 body {
   background: #ffff;
+  font-family: "Manrope", sans-serif;
 }
